[package]
name = "kvs"
version = "0.1.0"
authors = ["Chen Shuaimin <chen_shuaimin@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
structopt = "0.3.3"
failure = "0.1.6"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
log = "0.4.8"
env_logger = "0.7.0"
sled = "0.30.0"
crossbeam-skiplist = { version = "0.0.0", git = "https://github.com/crossbeam-rs/crossbeam.git" }
crossbeam-channel = "0.4.0"
rio = "0.7.5"
async-std = "1.4.0"
dashmap = "3.2.1"

[dev-dependencies]
assert_cmd = "0.11.1"
predicates = "1.0.1"
tempfile = "3.1.0"
walkdir = "2.2.9"
criterion = "0.3.0"
rand = "0.7.2"
crossbeam-utils = "0.7.0"
panic-control = "0.1.4"

[[bench]]
name = "benches"
harness = false
