[package]
name = "kvs"
version = "0.1.0"
authors = ["Chen Shuaimin <chen_shuaimin@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.4.0", features = ["unstable"] }
rio = "0.8.0"
dashmap = { version = "3.2.2", features = ["serde"] }
bincode = "1.2.1"
failure = "0.1.6"
structopt = "0.3.8"
log = "0.4.8"
env_logger = "0.7.1"
serde = "1.0.104"

[dev-dependencies]
assert_cmd = "0.12.0"
predicates = "1.0.2"
tempfile = "3.1.0"
walkdir = "2.3.1"
criterion = "0.3.0"
rand = "0.7.3"
crossbeam-utils = "0.7.0"
panic-control = "0.1.4"

[[bench]]
name = "benches"
harness = false
