[package]
name = "kvs"
version = "0.1.0"
authors = ["Chen Shuaimin <chen_shuaimin@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.4.0"
rio = "0.9.1"
crossbeam-skiplist = { git = "https://github.com/crossbeam-rs/crossbeam" }
bincode = "1.2.1"
thiserror = "1.0.10"
structopt = "0.3.8"
log = "0.4.8"
env_logger = "0.7.1"
serde = { version = "1.0.104", features = ["derive"] }

[dev-dependencies]
tempfile = "3.1.0"
criterion = "0.3.0"

[[bench]]
name = "benches"
harness = false
